<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight="0"
        android:hint="@string/text_default"
        android:maxLines="@string/text_maxLines" />

    <TextView
        android:id="@+id/rotationAngleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_weight="0"
        android:text="@string/settings_rotationAngle_label" />

    <Spinner
        android:id="@+id/rotationAngle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight="0" />

    <CheckBox
        android:id="@+id/centerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight="0"
        android:text="@string/settings_alignCenter_label" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight="0"
        android:textColor="@color/orange" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="bottom|end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            style="@style/ButtonBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:shadowColor="@android:color/white"
            android:text="@string/settings_cancelButton_label" />

        <Button
            android:id="@+id/accept"
            style="@style/ButtonBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:shadowColor="@android:color/white"
            android:text="@string/settings_acceptButton_label"
            android:textColor="@color/orange" />

    </LinearLayout>

</LinearLayout>